logs/collective.plone.gsxml.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/plone'...
Listing './lib/python3.5/site-packages/collective/plone/gsxml'...
Listing './lib/python3.5/site-packages/collective/plone/gsxml/browser'...
Listing './lib/python3.5/site-packages/collective/plone/gsxml/browser/images'...
Listing './lib/python3.5/site-packages/collective/plone/gsxml/docs'...
Listing './lib/python3.5/site-packages/collective/plone/gsxml/profiles'...
Listing './lib/python3.5/site-packages/collective/plone/gsxml/profiles/default'...
Compiling './lib/python3.5/site-packages/collective/plone/gsxml/rootmanifest.py'...
***   File "./lib/python3.5/site-packages/collective/plone/gsxml/rootmanifest.py", line 88
    print "UID:", uid, o
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective/plone/gsxml/tests'...
Listing './lib/python3.5/site-packages/collective.plone.gsxml-0.4.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
